# myCandle

./: Cargo.toml  Makefile  Readme.md
candle-examples/: Cargo.toml
my-candle-core/: Cargo.toml  safetensors.rs
my-candle-core/src/: backend.rs  backprop.rs  conv.rs  convert.rs  cpu_backend.rs  cuda_backend.rs  cudnn.rs  device.rs  display.rs  dtype.rs  dummy_cuda_backend.rs  error.rs  indexer.rs  layout.rs  lib.rs  mkl.rs  npy.rs  op.rs  shape.rs  storage.rs  strided_index.rs  tensor.rs  utils.rs  variable.rs
my-candle-core/src/cpu/: avx.rs  kernels.rs  mod.rs  neon.rs  simd128.rs
my-candle-core/src/quantized/: ggml_file.rs  k_quants.rs  mod.rs
my-candle-flash-attn/: Cargo.toml
my-candle-flash-attn/src/: ffi.rs
my-candle-kernels/: Cargo.toml  build.rs
my-candle-kernels/src/: affine.cu  compatibility.cuh  cuda_utils.cuh  lib.rs  unary.cu
my-candle-nn/: Cargo.toml
my-candle-nn/src/: activation.rs  conv.rs  embedding.rs  group_norm.rs  init.rs  layer_norm.rs  lib.rs  linear.rs  loss.rs  ops.rs  optim.rs  var_builder.rs
my-candle-transformers/: Cargo.toml
my-candle-transformers/src/: lib.rs
my-candle-transformers/src/generation/: mod.rs
my-candle-transformers/src/models/: bert.rs
my-candle-transformers/src/pipelines/: mod.rs
