[package]
name = "example"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core =  "0.2.0"
#accelerate-src = { version = "0.3.2" } //Apple targets
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
cudarc = { version = "0.9.14", features = ["f16"] }
gemm = { version = "0.15.6", package = "candle-gemm" }
hf-hub = "0.2.0"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
#intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2.147" }
log = "0.4"
memmap2 = "0.7.1"
num_cpus = "1.15.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
byteorder = "1.4.3"
candle-datasets  = "0.2.0"
candle-nn = "0.2.0"
candle-transformers =  "0.2.0"
#candle-flash-attn =  "0.1.0"
safetensors = "0.3.0"
serde = "1.0.99"
serde_json = "1.0.96"
thiserror = "1"
tokenizers = { version = "0.13.4", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
wav = "1.0.0"
zip = { version = "0.6.6", default-features = false }



[[bin]]
name ="basic_optimizer"
target = "src/basic_optimizer.rs"

[[bin]]
name="bert"
target = "src/bert/main.rs"

[[bin]]
name="mnist_training"
target = "src/mnist_training/main.rs"
