[package]
name = "my-candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
