[package]
name = "my-candle-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
[dependencies]
accelerate-src = { workspace = true, optional = true }
my-candle-core = { path = "../my-candle-core", version = "0.1.1", package = "my-candle-core" }
thiserror = { workspace = true }
hf-hub = { workspace = true}
my-candle-nn = { path = "../my-candle-nn", version = "0.1.1" }
intel-mkl-src = { workspace = true, optional = true }
my-candle-flash-attn = { path = "../my-candle-flash-attn" , version = "0.3.0"}
safetensors = { workspace = true }
rand = { workspace = true }
wav = { workspace = true }
serde = "1.0.185"
tracing = { workspace = true }


#[features]
#default = []
#accelerate = ["dep:accelerate-src", "my-candle-core/accelerate", "my-candle-nn/accelerate"]
#cuda = ["candle/cuda", "my-candle-nn/cuda"]
#flash-attn = ["cuda", "dep:candle-flash-attn"]
#mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl"]
